create components, css, navbar, vue route and project boxes

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10491,8 +10491,51 @@ a.text-dark:focus {
   }
 }
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+body {
+  max-width: 1300px;
+  margin: auto;
+  border: 2px solid #ff33cc;
+}
+
+.landing__header {
+  margin: 2rem 1.5rem;
+  height: 3rem;
+  position: relative;
+}
+
+.landing__header .header-container {
+  height: inherit;
+}
+
+.landing__header .header-container .header-brand {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.landing__header .header-container .header-brand .text {
+  font-size: 2rem;
+  font-style: bold;
+}
+
+.landing__header .nav-01 {
+  display: inline;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  margin-right: 1rem;
+  max-width: 75%;
+}
+
+.landing__header .nav-01 .nav-list {
+  display: inline;
+  list-style-type: none;
+  margin: 0 2px;
+}
+
+.landing__header .nav-01 .nav-list .items {
+  display: inline;
+  margin: 0 1.5rem;
 }
 
