--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,7 +8,50 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+body {
+	max-width: 1300px;
+	margin: auto;
+	border: 2px solid #ff33cc;
+
+}
+
+.landing__header {
+	margin: 2rem 1.5rem;
+	height: 3rem; 
+	position: relative;
+	.header-container {
+		height: inherit;
+
+		.header-brand {
+			display: inline-block;
+			vertical-align: middle;
+			.logo {
+			}
+
+			.text {
+				font-size: 2rem;
+				font-style: bold;
+			}
+		}
+	}
+	.nav-01 {
+		display: inline;
+		position: absolute;
+		right: 0;
+		top:50%;
+		transform: translateY(-50%);
+		margin-right: 1rem;
+		max-width: 75%;
+
+		.nav-list {
+			display: inline;
+			list-style-type: none;
+			margin: 0 2px;
+
+			.items {
+				display: inline;
+				margin: 0 1.5rem;
+			}
+		}
+	}
 }
